--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: awareframework_locations
 description: A new flutter plugin project.
 version: 0.0.2
-author:
-homepage:
+author: AWARE Mobile Context Instrumentation Middleware/Framework <yuuki.nishiyama@oulu.fi>
+homepage: http://www.awareframework.com
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
