--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: awareframework_locations
 description: A new flutter plugin project.
-version: 0.0.4
+version: 0.0.5
 author: AWARE Mobile Context Instrumentation Middleware/Framework <yuuki.nishiyama@oulu.fi>
 homepage: http://www.awareframework.com
 
@@ -10,11 +10,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  awareframework_core: ^0.0.9
-    
+  awareframework_core: ^0.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  test:
 
 # The following section is specific to Flutter.
 flutter:
